made slight style changes

--- a/index.html
+++ b/index.html
@@ -22,7 +22,7 @@
         <div class="container">
             <div class="navbar-header">
                 <a class="navbar-brand text-center" href=
-                "http://www.thedp.com"><img alt="The Daily Pennsylvanian" src=
+                "http://www.34st.com/"><img alt="34th Street" src=
                 "img/34th.png" style="max-height: 30px;"></a>
             </div>
         </div>
