third commit retouched design

--- a/index.html
+++ b/index.html
@@ -25,7 +25,44 @@
                 "http://www.34st.com/"><img alt="34th Street" src=
                 "img/34th.png" style="max-height: 30px;"></a>
             </div>
+
+            <div class = "navbar-header" style="width:10px;height:10px;margin:auto;background:#2996B2">
+            </div>
+
+            <div class="navbar-header">
+                <a class="navbar-brand text-center" href=
+                "http://www.thedp.com/"><img alt="34th Street" src=
+                "img/business.png" style="max-height: 30px;"></a>
+            </div>
+
+            <div class = "navbar-header" style="width:10px;height:10px;margin:auto;background:#2996B2">
+            </div>
+
+            <div class="navbar-header">
+                <a class="navbar-brand text-center" href=
+                "http://www.thedp.com/"><img alt="34th Street" src=
+                "img/business.png" style="max-height: 30px;"></a>
+            </div>
+
+            <div class = "navbar-header" style="width:10px;height:10px;margin:auto;background:#2996B2">
+            </div>
+
+            <div class="navbar-header">
+                <a class="navbar-brand text-center" href=
+                "http://www.thedp.com/"><img alt="34th Street" src=
+                "img/business.png" style="max-height: 30px;"></a>
+            </div>
+
+            <div class = "navbar-header" style="width:10px;height:10px;margin:auto;background:#2996B2">
+            </div>
+
+            <div class="navbar-header">
+                <a class="navbar-brand text-center" href=
+                "http://www.thedp.com/"><img alt="34th Street" src=
+                "img/dailypenn.png" style="max-height: 30px;"></a>
+            </div>
         </div>
+        
     </nav>
 
     <div class="header">
@@ -98,7 +135,7 @@
     <div >
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke1.jpg">
         </figure>
         <br> </br>
     </div>
@@ -149,43 +186,12 @@
         Although Erin still refers to Jara as “he,” she said she supports
         Jara’s transition and wasn’t entirely surprised by it. Having Jara live
         in her house, though, was grueling.</p>
-
-        <p>“It was a challenge, not because of who he was and who he is and
-        what he’s like. He had an argument on everything. He loved to debate,”
-        Erin said. “It’s hard because he never appreciated us.”</p>
-
-        <p>Despite her home life, Jara was a model student in high school. She
-        became salutatorian of her graduating class and spent her free time on
-        policy debate and mock trial. Her friends and family who knew her at
-        the time describe her as the personification of a pre-Ivy League
-        student.</p>
-
-        <p>“His work ethic was just off the charts,” said Troi Chomas, who was
-        Jara’s high school debate partner and is now a junior at Towson
-        University in southern Maryland. Troi sometimes switches between male
-        and female pronouns, especially when talking about their time in high
-        school when she knew Jara as Christian. “He picked up policy the same
-        year we were debating together, and we did really well because he
-        worked his butt off. It was crazy.”</p>
-
-        <p>To pay for travel to debate tournaments, Jara secretly earned money
-        by taking up sex work — a younger boy selling himself to a consistent
-        rotation of older men. One of the men who found her through a gay
-        dating site controlled a large network of male sex workers in their
-        mid-20s. Although she was never in the network — the man paid for Jara
-        to be with him personally — watching him work taught her the basics of
-        the sex trade.</p>
-
-        <p>After graduation, she headed to her top choice: the Huntsman Program
-        at the University of Pennsylvania, on full financial aid. Jara took off
-        for Philadelphia, still a boy named Christian who was inclined to
-        linger by the makeup aisle but didn’t know why.</p>
     </div>
 
-    <div style = "float:left;">
+    <div style = "position: relative; left: 300px">
         <br> </br>
         <figure> 
-            <img align = "left" class="photo" src="https://s3.amazonaws.com/media.dpn/42018_jaraedited5f.jpg">
+            <img width = "25%" src="img/coke2.jpg">
             <figcaption>Fig1. This is a figure caption!</figcaption>
         </figure>
         <br> </br>
@@ -237,7 +243,7 @@
     <div >
     <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke5.jpg">
         </figure>
         <br> </br>
     </div>
@@ -263,39 +269,12 @@
         site OKCupid in fall of 2013, though there’s never been anything
         between them but friendship. “But I feel like she’s a better person
         than the job. And to me it feels demeaning.”</p>
-
-        <p>The high school Jara agreed with Jake. She was ashamed of her work
-        and only did it because she felt like she didn’t have another option to
-        make money. It wasn't until college, when Jara started accepting
-        herself as transgender, that she overcame the shame around her identity
-        as a sex worker.</p>
-
-        <p>“I wouldn’t do it if I didn’t enjoy it. I hate people who are like,
-        ‘Only women who have nothing else to do, only women who are depressed
-        with their lives do it,’” she said. “I feel so empowered. I feel like a
-        businesswoman. I’m getting somewhere. I can use it as capital to do
-        other things.”</p>* * *<br>
-
-        <p>The single piece of furniture in Jara’s living room is a TV, left on
-        the carpeted floor because she’s afraid to mount it on the wall by
-        herself and hasn’t gotten around to buying a stand for it. The only
-        room in her one-person apartment that looks lived in is the bedroom,
-        where the entire four-foot windowsill is covered in bottles and boxes
-        of beauty products.</p>
-
-        <p>“I need some furniture,” she said. “I’m going to take a trip to IKEA
-        — I’ve never been.”</p>
-
-        <p>Sitting on her bed — a mattress on the floor — in a black-and-red
-        robe with a turquoise bra peeking out, she pulled out her phone to look
-        at the list of topics she didn’t want to forget to bring
-        up.</p>
     </div>
 
     <div >
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke3.jpg">
         </figure>
         <br> </br>
     </div>
@@ -336,49 +315,14 @@
         Herman told the student, who also asked not to be named, that Jara’s
         parents were both dead.</p>
 
-        <p>“She said we should have grace dealing with her because it’s
-        obviously a pretty big thing to have happened at 18 years old,” he
-        said. “Christian was a little bit more quiet, a little bit more
-        reserved with us, and we didn’t know why.”</p>
-
-        <p>In an interview, Herman said that she and Jara had several
-        conversations about Jara’s personal life. Herman acknowledged that she
-        did share details like Jara’s parents dying and that she and her sister
-        didn’t speak, but only in response to other Huntsman students asking
-        why Jara didn’t spend more time with them. By sharing, Herman said, she
-        wanted to encourage other students to reach out to Jara. Many students,
-        Huntsman faculty director Janice Bellace said, knew the details
-        already.</p>
-
-        <p>“It’s for the benefit of the student,” Herman said. “I never talk to
-        any student about confidential information when it regards academics or
-        health or anything like that.”</p>
-
-        <p>Whatever Herman’s intentions may have been, Jara never felt
-        comfortable again with Herman or the other Huntsman students.</p>
-
-        <p>Feeling ostracized from her Huntsman classmates, Jara became
-        increasingly depressed. Her mental health was tied up with her gender
-        identity: The worse she felt, the more she hated her genitals. Looking
-        in a mirror to see herself as a man made her feel sick.</p>
-
-        <p>Spring of freshman year, she walked into Counseling and
-        Psychological Services without an appointment, suicidal and desperate
-        to see anyone who had time. Haltingly, Jara told her therapist in a
-        follow-up appointment about how her depression seemed connected to her
-        penis and how, above all, she wanted to get rid of it.</p>
-
-        <p>That was normal, her therapist said, and Penn’s student insurance
-        plan even covered gender reassignment.</p>
-
-        <p>“That day changed my life,” Jara said.</p><br>
+      <br>
         <br>
     </div>
 
     <div >
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke5.jpg">
         </figure>
         <br> </br>
     </div>
@@ -454,7 +398,7 @@
     <div>
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke3.jpg">
         </figure>
         <br> </br>
     </div>
@@ -501,7 +445,7 @@
      <div >
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke4.jpg">
         </figure>
         <br> </br>
     </div>
