pics don't work

--- a/index.html
+++ b/index.html
@@ -135,7 +135,7 @@
     <div >
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/coke1.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke1.JPG">
         </figure>
         <br> </br>
     </div>
