--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div style = "position: relative; left: 300px">
         <br> </br>
         <figure> 
-            <img width = "25%" src="img/coke2.jpg">
+            <img width = "25%" src="img/panda.jpg">
             <figcaption>Fig1. This is a figure caption!</figcaption>
         </figure>
         <br> </br>
@@ -243,7 +243,7 @@
     <div >
     <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/coke5.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
         </figure>
         <br> </br>
     </div>
@@ -274,7 +274,7 @@
     <div >
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/coke3.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
         </figure>
         <br> </br>
     </div>
@@ -322,7 +322,7 @@
     <div >
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/coke5.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/panda.jpg">
         </figure>
         <br> </br>
     </div>
