--- a/index.html
+++ b/index.html
@@ -191,7 +191,7 @@
     <div style = "position: relative; left: 300px">
         <br> </br>
         <figure> 
-            <img width = "25%" src="img/panda.jpg">
+            <img width = "25%" src="img/panda.JPG">
             <figcaption>Fig1. This is a figure caption!</figcaption>
         </figure>
         <br> </br>
