--- a/index.html
+++ b/index.html
@@ -398,7 +398,7 @@
     <div>
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/coke3.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke3.JPG">
         </figure>
         <br> </br>
     </div>
@@ -445,7 +445,7 @@
      <div >
         <br> </br>
         <figure> 
-            <img  class="photo" width = "100%" height = "100%" src="img/coke4.jpg">
+            <img  class="photo" width = "100%" height = "100%" src="img/coke4.JPG">
         </figure>
         <br> </br>
     </div>
