--- a/index.html
+++ b/index.html
@@ -491,6 +491,9 @@
     <footer>
         <div class="footer-bar">
             <br> </br>
+                <p>Created by Dhruv Agarwal | Jospeh Gao </p>
+                <hr style="width:50%">
+                <p>The DP has a growing web development team. If you are interested in joining please email <a href="chen@thedp.com">chen@thedp.com</a></p>
             <hr style="width:50%">
             <div class="social-media">
             <!-- FACEBOOK -->
