--- a/index.html
+++ b/index.html
@@ -12,7 +12,7 @@
     <title>34th Street Mockup</title>
     <meta content="" name="description">
     <meta content="width=device-width, initial-scale=1" name="viewport">
-    <link href="img/favicon.ico" rel="shortcut icon">
+    <link href="http://d8es5520nmizf.cloudfront.net/201504087keqOksPi/dist/img/favicon-32x32.png" rel="shortcut icon">
     <link href="css/bootstrap.min.css" rel="stylesheet" type="text/css">
     <link href="css/style.css" rel="stylesheet" type="text/css">
 </head>
